Fix image squash

--- a/static/style.css
+++ b/static/style.css
@@ -24,7 +24,6 @@ a {
 img {
     display: inline-block;
     max-height:320px;
-    width: 100%;
     height: auto;
 }
 
